<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.brandonnalls.mockmocklocations.WhitelistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/all_apps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/toolbar_whitelist_all_setting"/>

        <Button
            android:id="@+id/add_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toolbar_whitelist_add_app"/>

        <Button
            android:id="@+id/donate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toolbar_whitelist_donation"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/list_and_empty_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#555555"
            android:drawSelectorOnTop="false"/>
        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/empty_state"
            android:textSize="30sp"
            android:textColor="@android:color/white"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/whitelist_all_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/whitelist_all_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/all_apps_whitelisted_state"
            android:textSize="30sp"
            android:textColor="@android:color/white"/>
    </FrameLayout>
</LinearLayout>

